@@ -22,7 +22,6 @@
 
 Alias /awstatsicons "{AWSTATS_WEB_DIR}"
 
-
 NameVirtualHost 127.0.0.1:80
 
 <VirtualHost 127.0.0.1:80>
